--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-    
+    <main>
+        <section class="about">
+            <h1>About you</h1>
+            <span>Stats based on you.</span>
+            <div class="card">
+                <!-- card data -->
+            </div>
+        </section>
+        <section class="favorite"></section>
+        <section class="status"></section>
+        <section class="catalog"></section>
+        <section class="calendar"></section>
+    </main>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
