--- a/index.html
+++ b/index.html
@@ -1,26 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;600&family=Noto+Sans:wght@100;300;400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="/css/main.css">
 </head>
+
 <body>
     <main>
         <section class="about">
             <h1>About you</h1>
             <span>Stats based on you.</span>
             <div class="card">
-                <!-- card data -->
+                <!-- <ul>
+                    <li>
+                        <h2>Top apps this month</h2>
+                        <span>You authenticated 23 times out of a total of 32 authentications.</span>
+
+                    </li>
+                </ul> -->
             </div>
         </section>
-        <section class="favorite"></section>
-        <section class="status"></section>
-        <section class="catalog"></section>
-        <section class="calendar"></section>
+        <section class="favorite">
+            <h1>test</h1>
+        </section>
+        <section class="status">
+            <h1>test</h1>
+        </section>
+        <section class="catalog">
+            <h1>test</h1>
+        </section>
+        <section class="calendar">
+            <h1>test</h1>
+        </section>
     </main>
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
