--- a/index.html
+++ b/index.html
@@ -7,25 +7,53 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
     <link
         href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;600&family=Noto+Sans:wght@100;300;400&display=swap"
         rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+
     <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
     <main>
         <section class="about">
-            <h1>About you</h1>
-            <span>Stats based on you.</span>
+            <a class="link_chevron" target="_blank" href="#">
+                <h1>About you</h1>
+            </a>
+            <span>Stats based on your activity.</span>
             <div class="card">
-                <!-- <ul>
+                <ul>
                     <li>
                         <h2>Top apps this month</h2>
                         <span>You authenticated 23 times out of a total of 32 authentications.</span>
-
+                        <div apps>
+                            <a data-app="canvas" target="_blank" href="#">Canvas</a>
+                            <a data-app="office365" target="_blank" href="#">Office365</a>
+                            <a data-app="myfiu" target="_blank" href="#">MyFIU</a>
+                        </div>
                     </li>
-                </ul> -->
+                    <li>
+                        <h2>Two-Factor Authentication</h2>
+                        <span>You have contributed 43 SMS to FlU's total 53.2K for this month.</span>
+                        <div stacked_graph>
+                            <span data-percent="70" data-label="SMS"></span>
+                            <span data-percent="20" data-label="Call"></span>
+                            <span data-percent="10" data-label="OTP"></span>
+                        </div>
+                        <a class="link_external" target="_blank" href="#">Learn how to set up Duo mobile</a>
+                    </li>
+                    <li>
+                        <h2>Security Checkup</h2>
+                        <span>Your recovery information hasn't been modified in a while. Go to account.fiu.edu/account
+                            and make sure everything is up
+                            to date</span>
+                        <a class="link_arrow" target="_blank" href="https://account.fiu.edu/account/">Go to Account</a>
+                    </li>
+                </ul>
             </div>
         </section>
         <section class="favorite">
