Font and chevron

--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
             </div>
         </section>
         <section class="favorite">
-            <h1>Favorite Apps</h1>
+            <a class="link_chevron" target="_blank" href="#">
+                <h1>Favorite Apps</h1>
+            </a>
+            <span>Apps curated by you</span>
             <div class="card">
-            <div id="subtext">Apps curated by you</div>
             <div class="containerApps">
                 <a href=https://canvas.fiu.edu id="canvas">
                     <!-- <span class="text"> -->
@@ -69,7 +71,7 @@
                 </a>
                 <a href="https://mail.fiu.edu" id="mail">
                     <!-- <span class="text"> -->
-                        Mail
+                        Office365
                     <!-- </span></a> -->
                 <a href="https://zoom.us" id="zoom">
                     <!-- <span class="text"> -->
