Different screen size layout

--- a/index.html
+++ b/index.html
@@ -85,13 +85,25 @@
             </div>
         </section>
         <section class="status">
-            <h1>test</h1>
+            <a class="link_chevron" target="_blank" href="https://fiu.service-now.com/sp?id=services_status">
+                <h1>System Status</h1>
+            </a>
+            <span>View service interruptions or scheduled maintenances</span>
+            <div class="card"></div>
         </section>
         <section class="catalog">
-            <h1>test</h1>
+            <a class="link_chevron" target="_blank" href="#">
+                <h1>Catalog</h1>
+            </a>
+            <span>FIU's complete list of applications participating in Single Sign-On (SSO)</span>
+            <div class="card"></div>
         </section>
         <section class="calendar">
-            <h1>test</h1>
+            <a class="link_chevron" target="_blank" href="#">
+                <h1>Calendar</h1>
+            </a>
+            <span>View upcoming academic events</span>
+            <div class="card"></div>
         </section>
     </main>
 
