Catalog search and filter buttons

--- a/index.html
+++ b/index.html
@@ -96,7 +96,56 @@
                 <h1>Catalog</h1>
             </a>
             <span>FIU's complete list of applications participating in Single Sign-On (SSO)</span>
-            <div class="card"></div>
+            <div class="card">
+                <header>
+                    <form action="/" method="post">
+                        <label for="catalog_search">
+                            <input id="catalog_search" type="text" name="catalog_search" placeholder="Search">
+                            <i class="material-icons">search</i>
+                        </label>
+                    </form>
+                    <div filter>
+                        <span data-icon="editor_choice">Popular</span>
+                        <span data-icon="stacks">All</span>
+                        <span data-icon="school">Student</span>
+                        <span data-icon="work">Employee</span>
+                    </div>
+                </header>
+                <article>
+                    <div class="list">
+                        
+                    </div>
+                    <!-- <div filter>
+                        <span>#</span>
+                        <span>A</span>
+                        <span>B</span>
+                        <span>C</span>
+                        <span>D</span>
+                        <span>E</span>
+                        <span>F</span>
+                        <span>G</span>
+                        <span>H</span>
+                        <span>I</span>
+                        <span>J</span>
+                        <span>K</span>
+                        <span>L</span>
+                        <span>M</span>
+                        <span>N</span>
+                        <span>O</span>
+                        <span>P</span>
+                        <span>Q</span>
+                        <span>R</span>
+                        <span>S</span>
+                        <span>T</span>
+                        <span>U</span>
+                        <span>V</span>
+                        <span>W</span>
+                        <span>X</span>
+                        <span>Y</span>
+                        <span>Z</span>
+                    </div> -->
+                </article>
+            </div>
         </section>
         <section class="calendar">
             <a class="link_chevron" target="_blank" href="#">
