3rd row and placeholder images

--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@
                     <a href="https://fiu.service-now.com/sp" id="askit">
                         AskIT
                     </a>
+                    <a href="https://panthersoft.fiu.edu" id="panthersoft">
+                        Panthersoft
+                    </a>
+                    <a href="https://onestop.fiu.edu" id="onestop">
+                        OneStop
+                    </a>
+                    <a href="https://hr.fiu.edu" id="hr">
+                        HR
+                    </a>
                 </div>
             </div>
         </section>
