reported outages, alerts
updates to about scss and colors scss

--- a/index.html
+++ b/index.html
@@ -98,7 +98,38 @@
                 <h1>System Status</h1>
             </a>
             <span>View service interruptions or scheduled maintenances</span>
-            <div class="card"></div>
+            <div class="card"> 
+                
+                Reported Outages
+                <span class="outages">
+                    <ul class="list">
+                        FIU Develop - Reporting Delays
+                        <li id="dateOutages">
+                            Reported: 11/27/2023 01:08:00PM
+                        </li>
+                        <li id="contentOutages">
+                            The FIU Develop environment is experiencing completion report delays
+                            , this will affect dependent service such as PSBI reporting. Educational 
+                            Technology Services is currently working with the vendor on a resolution.
+                        </li>
+                    </ul>
+                </span>
+
+                Alerts
+                <span class="alerts">
+                    <ul class="list">
+                        Important Notice: macOS Sonoma (Mac OS 14) Update
+                        <li id = "dateAlerts">
+                            Posted: 09/25/2023 09:14:49PM
+                        </li>
+                        <li id = "contentAlerts">
+                            The DoIT strongly advises against updating FIU-Owned Mac OS devices to Sonoma
+                            (Mac OS 14). Our department needs time to test the new operating system's compataibility
+                            with FIU's antivirus and VPN platforms.
+                        </li>
+                    </ul>
+                </span>
+            </div>
         </section>
         <section class="catalog">
             <a class="link_chevron" target="_blank" href="#">
