Calendar dropdown, styling, and markup
Also made alerts scrollable too

--- a/index.html
+++ b/index.html
@@ -142,8 +142,113 @@
             <a class="link_chevron" target="_blank" href="#">
                 <h1>Calendar</h1>
             </a>
-            <span>View upcoming academic events</span>
-            <div class="card"></div>
+            <br>
+            <span id="subheader">View upcoming academic events</span>
+            <div id="header">
+                <div class="dropdown" data-dropdown>      
+                    <button class="material-symbols-outlined" data-dropdown-button>menu</button>                        
+                    <div class="dropdown-menu">
+                        <span class="changeableContent" id="campuslifeDropdown">Campus Life</span>
+                        <span class="changeableContent" id="artsDropdown">Arts</span>
+                        <span class="changeableContent" id="academicsDropdown">Academics</span>
+                        <span class="changeableContent" id="athleticsDropdown">Athletics</span>
+                        <span class="changeableContent" id="recreationDropdown">Recreation</span>
+                        <span class="changeableContent" id="communityDropdown">Community</span>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class = "titles" id="campuslife">
+                    <h4>Campus Life</h4>
+                    <div>
+                        <h5>Subtitle1</h5>
+                        <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
+                    </div>
+                    <div>
+                        <h5>Subtitle2</h5>
+                        <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
+                    </div>
+                    <div>
+                        <h5>Subtitle3</h5>
+                        <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
+                    </div>  
+                </div>
+                <div class = "titles" id="arts">
+                    <h4>Arts</h4>
+                    <div>
+                        <h5>Subtitle1</h5>
+                        <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
+                    </div>
+                    <div>
+                        <h5>Subtitle2</h5>
+                        <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
+                    </div>
+                    <div>
+                        <h5>Subtitle3</h5>
+                        <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
+                    </div>
+                </div>
+                <div class = "titles" id="academics">
+                    <h4>Academics</h4>
+                    <div>
+                        <h5>Subtitle1</h5>
+                        <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
+                    </div>
+                    <div>
+                        <h5>Subtitle2</h5>
+                        <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
+                    </div>
+                    <div>
+                        <h5>Subtitle3</h5>
+                        <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
+                    </div>
+                </div>
+                <div class = "titles" id="athletics">
+                    <h4>Athletics</h4>
+                    <div>
+                        <h5>Subtitle1</h5>
+                        <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
+                    </div>
+                    <div>
+                        <h5>Subtitle2</h5>
+                        <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
+                    </div>
+                    <div>
+                        <h5>Subtitle3</h5>
+                        <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
+                    </div>
+                </div>
+                <div class = "titles" id="recreation">
+                    <h4>Recreation</h4>
+                    <div>
+                        <h5>Subtitle1</h5>
+                        <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
+                    </div>
+                    <div>
+                        <h5>Subtitle2</h5>
+                        <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
+                    </div>
+                    <div>
+                        <h5>Subtitle3</h5>
+                        <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
+                    </div>
+                </div>
+                <div class = "titles" id="community">
+                    <h4>Community</h4>
+                    <div>
+                        <h5>Subtitle1</h5>
+                        <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
+                    </div>
+                    <div>
+                        <h5>Subtitle2</h5>
+                        <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
+                    </div>
+                    <div>
+                        <h5>Subtitle3</h5>
+                        <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
