--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class = "titles" id="campuslife">
+                <div class = "show calSection campuslifeDropdown">
                     <h4>Campus Life</h4>
                     <div>
                         <h5>Subtitle1</h5>
@@ -173,7 +173,7 @@
                         <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
                     </div>  
                 </div>
-                <div class = "titles" id="arts">
+                <div class = "calSection artsDropdown">
                     <h4>Arts</h4>
                     <div>
                         <h5>Subtitle1</h5>
@@ -188,7 +188,7 @@
                         <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
                     </div>
                 </div>
-                <div class = "titles" id="academics">
+                <div class = "calSection academicsDropdown">
                     <h4>Academics</h4>
                     <div>
                         <h5>Subtitle1</h5>
@@ -203,7 +203,7 @@
                         <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
                     </div>
                 </div>
-                <div class = "titles" id="athletics">
+                <div class = "calSection athleticsDropdown">
                     <h4>Athletics</h4>
                     <div>
                         <h5>Subtitle1</h5>
@@ -218,7 +218,7 @@
                         <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
                     </div>
                 </div>
-                <div class = "titles" id="recreation">
+                <div class = "calSection recreationDropdown">
                     <h4>Recreation</h4>
                     <div>
                         <h5>Subtitle1</h5>
@@ -233,7 +233,7 @@
                         <p>A campus initiative combating food poverty among our peers. This initiative is meant to ensure that there is a supportive environment where no student faces...</p>
                     </div>
                 </div>
-                <div class = "titles" id="community">
+                <div class = "calSection communityDropdown">
                     <h4>Community</h4>
                     <div>
                         <h5>Subtitle1</h5>
