updating the examples to current calendar.fiu format

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                         <a class = "readmore">Read More</a>
                         <div class = "extra-information">
                             <span class = "material-symbols-outlined schedule">schedule</span>
-                            <a>08:00PM</a>
+                            <a>N/A</a>
                             <span class = "material-symbols-outlined location">location_on</span>
                             <a>MMC</a>
                             <span class = "material-symbols-outlined apartment">apartment</span>
@@ -388,11 +388,11 @@
                         <a class = "readmore">Read More</a>
                         <div class = "extra-information">
                             <span class = "material-symbols-outlined schedule">schedule</span>
-                            <a>08:00PM</a>
+                            <a>N/A</a>
                             <span class = "material-symbols-outlined location">location_on</span>
-                            <a>MMC</a>
+                            <a>FIU CARTA | Mana Wynwood, Central Space</a>
                             <span class = "material-symbols-outlined apartment">apartment</span>
-                            <a>Computer Science</a>
+                            <a>FIU CARTA Mana Wynwood</a>
                         </div>
                     </div>
                     <div>
@@ -401,53 +401,53 @@
                         <a class = "readmore">Read More</a>
                         <div class = "extra-information">
                             <span class = "material-symbols-outlined schedule">schedule</span>
-                            <a>08:00PM</a>
+                            <a>9am</a>
                             <span class = "material-symbols-outlined location">location_on</span>
-                            <a>MMC</a>
+                            <a>Glenn Gallery, Glenn Hubert Library, Biscayne Bay Campus, First & Second Floors</a>
                             <span class = "material-symbols-outlined apartment">apartment</span>
-                            <a>Computer Science</a>
+                            <a>Libraries</a>
                         </div>
                     </div>
                 </div>
                 <div class = "calSection academicsDropdown">
                     <h4>Academics</h4>
                     <div>
-                        <h5>Canvas: Grading and Progress Monitoring</h5>
-                        <p>This 1.5-hour, hands-on workshop covers how to use the Gradebook in Canvas. It will cover using the SpeedGrader, rubrics and assignment groups; providing...</p>
+                        <h5>Parent Club | Parenting Teens: Survival Tips (Free Webinar - English)</h5>
+                        <p>In this workshop, parents are introduced to the five core tips for parenting teens with confidence and success. CLICK ON A DATE TO REGISTER Feb 5 | 11...</p>
                         <a class = "readmore">Read More</a>
                         <div class = "extra-information">
                             <span class = "material-symbols-outlined schedule">schedule</span>
-                            <a>08:00PM</a>
+                            <a>11am</a>
                             <span class = "material-symbols-outlined location">location_on</span>
-                            <a>MMC</a>
+                            <a>N/A</a>
                             <span class = "material-symbols-outlined apartment">apartment</span>
-                            <a>Computer Science</a>
+                            <a>Center for Children and Families</a>
                         </div>
                     </div>
                     <div>
-                        <h5>Career Spotlight: Accounting</h5>
-                        <p>In this session, you will learn some areas you can have a career in with your Accounting major. RSVP in Handshake is required. Once you have RSVP'd you will...</p>
+                        <h5>Simple Syllabus: Essentials (In Person)</h5>
+                        <p>Come join us to learn more about Simple Syllabus and how it makes the creation of syllabi convenient and efficient for instructors! Templates with fields...</p>
                         <a class = "readmore">Read More</a>
                         <div class = "extra-information">
                             <span class = "material-symbols-outlined schedule">schedule</span>
-                            <a>08:00PM</a>
+                            <a>2pm</a>
                             <span class = "material-symbols-outlined location">location_on</span>
-                            <a>MMC</a>
+                            <a>MMC - Modesto A. Maidique Campus, GL 158</a>
                             <span class = "material-symbols-outlined apartment">apartment</span>
-                            <a>Computer Science</a>
+                            <a>Division of Information Technology</a>
                         </div>
                     </div>
                     <div>
-                        <h5>Hacker Nation</h5>
-                        <p>Intellectually dynamic learning community that meets every Wednesday to discuss future-facing topics such as: TECH - AI - INNOVATION - RESEARCH -...</p>
+                        <h5>The Exile Studies Program Presents:" We're not Nostalgia Junkies, We're Futurists: A New...</h5>
+                        <p>This Event has been postponed until further. The Exiles Studies Program, in collaboration with The Betsy-South Beach Hotel. The Betsy-FIU Exile Studies...</p>
                         <a class = "readmore">Read More</a>
                         <div class = "extra-information">
                             <span class = "material-symbols-outlined schedule">schedule</span>
-                            <a>08:00PM</a>
+                            <a>6:45pm</a>
                             <span class = "material-symbols-outlined location">location_on</span>
-                            <a>MMC</a>
+                            <a>GC - Graham University Center, 243</a>
                             <span class = "material-symbols-outlined apartment">apartment</span>
-                            <a>Computer Science</a>
+                            <a>Department of English</a>
                         </div>
                     </div>
                 </div>
@@ -459,11 +459,11 @@
                         <a class = "readmore">Read More</a>
                         <div class = "extra-information">
                             <span class = "material-symbols-outlined schedule">schedule</span>
-                            <a>08:00PM</a>
+                            <a>N/A</a>
                             <span class = "material-symbols-outlined location">location_on</span>
-                            <a>MMC</a>
+                            <a>N/A</a>
                             <span class = "material-symbols-outlined apartment">apartment</span>
-                            <a>Computer Science</a>
+                            <a>N/A</a>
                         </div>
                     </div>
                     <div>
@@ -472,11 +472,11 @@
                         <a class = "readmore">Read More</a>
                         <div class = "extra-information">
                             <span class = "material-symbols-outlined schedule">schedule</span>
-                            <a>08:00PM</a>
+                            <a>N/A</a>
                             <span class = "material-symbols-outlined location">location_on</span>
-                            <a>MMC</a>
+                            <a>N/A</a>
                             <span class = "material-symbols-outlined apartment">apartment</span>
-                            <a>Computer Science</a>
+                            <a>N/A</a>
                         </div>
                     </div>
                     <div>
@@ -485,27 +485,27 @@
                         <a class = "readmore">Read More</a>
                         <div class = "extra-information">
                             <span class = "material-symbols-outlined schedule">schedule</span>
-                            <a>08:00PM</a>
+                            <a>N/A</a>
                             <span class = "material-symbols-outlined location">location_on</span>
-                            <a>MMC</a>
+                            <a>N/A</a>
                             <span class = "material-symbols-outlined apartment">apartment</span>
-                            <a>Computer Science</a>
+                            <a>N/A</a>
                         </div>
                     </div>
                 </div>
                 <div class = "calSection recreationDropdown">
                     <h4>Recreation</h4>
                     <div>
-                        <h5>XXVII New Music Miami ISCM Festival: FIU Alumni Composers Concert</h5>
-                        <p>DESCRIPTION The music of FIU alumni composers takes center stage as their works are performed by the members of the NODUS Ensemble at The Wolfsonian-FIU on...</p>
+                        <h5>FIU Miami International GuitART Festival 2024: Marco Battaglia in Concert</h5>
+                        <p>The 2024 Miami International GuitART Festival presents the 19th century music specialist and virtuoso guitarist Marco Batttaglia in a solo concert,...</p>
                         <a class = "readmore">Read More</a>
                         <div class = "extra-information">
                             <span class = "material-symbols-outlined schedule">schedule</span>
-                            <a>08:00PM</a>
+                            <a>7:30pm</a>
                             <span class = "material-symbols-outlined location">location_on</span>
-                            <a>MMC</a>
+                            <a>WPAC - Wertheim Performing Arts Center, Concert Hall</a>
                             <span class = "material-symbols-outlined apartment">apartment</span>
-                            <a>Computer Science</a>
+                            <a>College of Communication Architecture + The Arts</a>
                         </div>
                     </div>
                     <div>
@@ -522,58 +522,58 @@
                         </div>
                     </div>
                     <div>
-                        <h5>Concerto Competition Winner's Concert with the FIU Symphony Orchestra</h5>
-                        <p>The FIU Symphony Orchestra presents one of the most popular programs of its season! The winners of the 2023-2024 annual FIU Concerto Competition will...</p>
+                        <h5>XXVII New Music Miami ISCM Festival: An Evening of Cello, Piano, & Electronics</h5>
+                        <p>Enjoy an evening of cutting-edge music for cello, piano, and electronics by some of FIU’s finest faculty artists including cellist Jason...</p>
                         <a class = "readmore">Read More</a>
                         <div class = "extra-information">
                             <span class = "material-symbols-outlined schedule">schedule</span>
-                            <a>08:00PM</a>
+                            <a>7pm</a>
                             <span class = "material-symbols-outlined location">location_on</span>
-                            <a>MMC</a>
+                            <a>WLF - The Wolfsonian</a>
                             <span class = "material-symbols-outlined apartment">apartment</span>
-                            <a>Computer Science</a>
+                            <a>College of Communication Architecture + The Arts</a>
                         </div>
                     </div>
                 </div>
                 <div class = "calSection communityDropdown">
                     <h4>Community</h4>
                     <div>
-                        <h5>Parent Club | Let's Talk Tech (Free Webinar - English)</h5>
-                        <p>In this workshop, parents learn five key strategies to support healthy tech use at home including, guidelines for technology use, creating rules and...</p>
+                        <h5>Parent Club | Raising Resilient Children (Free Webinar - English)</h5>
+                        <p>In this workshop, parents are introduced to six core building blocks for children to manage their feelings and become resilient in dealing with life stress....</p>
                         <a class = "readmore">Read More</a>
                         <div class = "extra-information">
                             <span class = "material-symbols-outlined schedule">schedule</span>
-                            <a>08:00PM</a>
+                            <a>6pm</a>
                             <span class = "material-symbols-outlined location">location_on</span>
-                            <a>MMC</a>
+                            <a>N/A</a>
                             <span class = "material-symbols-outlined apartment">apartment</span>
-                            <a>Computer Science</a>
+                            <a>Center for Children and Families</a>
                         </div>
                     </div>
                     <div>
-                        <h5>Parent Club | Criando Adolescentes Responsable (Talleres Gratuitos en Español)</h5>
-                        <p>En este taller se presentará los seis elementos claves para que los adolescentes sean responsables. También se darán ideas específicas sobre cómo enseñar y...</p>
+                        <h5>TTR: Connect, Care, Conserve: How Zoo Miami Creates Community Impact</h5>
+                        <p>Tuesday Times Roundtable TTR is FIU’s weekly series of moderated conversations around current global issues and trends. Conversations bring into play the...</p>
                         <a class = "readmore">Read More</a>
                         <div class = "extra-information">
                             <span class = "material-symbols-outlined schedule">schedule</span>
-                            <a>08:00PM</a>
+                            <a>12:30pm</a>
                             <span class = "material-symbols-outlined location">location_on</span>
-                            <a>MMC</a>
+                            <a>GC - Graham University Center, GC 150</a>
                             <span class = "material-symbols-outlined apartment">apartment</span>
-                            <a>Computer Science</a>
+                            <a>Global Learning Initiatives</a>
                         </div>
                     </div>
                     <div>
-                        <h5>Parent Club | Crianza Positiva (Talleres Gratuitos en Español)</h5>
-                        <p>En este taller, se les presentara a los padres los cinco principios claves de la crianza positiva. Además, proporcionaremos los mejores consejos para padres...</p>
+                        <h5>Hacker Nation</h5>
+                        <p>Intellectually dynamic learning community that meets every Wednesday to discuss future-facing topics such as: TECH - AI - INNOVATION - RESEARCH -...</p>
                         <a class = "readmore">Read More</a>
                         <div class = "extra-information">
                             <span class = "material-symbols-outlined schedule">schedule</span>
-                            <a>08:00PM</a>
+                            <a>12pm</a>
                             <span class = "material-symbols-outlined location">location_on</span>
-                            <a>MMC</a>
+                            <a>N/A</a>
                             <span class = "material-symbols-outlined apartment">apartment</span>
-                            <a>Computer Science</a>
+                            <a>StartUP FIU</a>
                         </div>
                     </div>
                 </div>
